--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
 
                 <div class="modal-body">
                     <div class="d-flex  flex-column justify-content-center align-items-center">
-
+                        <!--
                         <div class="text-white text-centered font-weight-bold h3">
                             ACI KAYBIMIZ
-                        </div>
-                        <img src="/assets/images/cenaze.jpg" class="img-fluid"></img>
-                        <div class="pt-2 text-white">
+                        </div> -->
+                        <img src="/assets/images/Kabotaj-Bayramı-Duim-Der (1).png" class="img-fluid"></img>
+                        <!-- <div class="pt-2 text-white">
                             20.12.2019 tarihinde Hint okyanusunda seyir halinde , gemi kaptanı olarak görevi başındayken
                             hain bir saldırı sonucu hayatını kaybeden İTÜ Denizcilik Fakültesi Güverte 1997 mezunu
                             Kaptan Bora EKŞİ’yi kaybetmenin derin üzüntüsü içindeyiz.
@@ -79,11 +79,11 @@
 
                             Kaptan Bora EKŞİ’nin cenazesi , 25.12.2019 tarihinde Altunizade Marmara İlahiyat Fakültesi
                             Camii’ndeki öğle namazının ardından Valide Sultan Mezarlığı’na defnedilecektir.
-                        </div>
+                        </div> -->
                     </div>
-                    <div class="text-right text-white font-weight-bold">
+                    <!-- <div class="text-right text-white font-weight-bold">
                         İÜ DUİMDER Yönetim Kurulu
-                    </div>
+                    </div> -->
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">KAPAT</button>
@@ -116,12 +116,12 @@
 
             <div class="bg-danger">
                 <div class="box">
-                   DİJİTAL
+                    DİJİTAL
                 </div>
             </div>
         </div>
 
-         <div
+        <div
             class="container message d-flex flex-column justify-content-center align-items-center  mt-sm-2 mb-sm-2 pt-sm-2">
             <a href="https://www.duimder.org/register"
                 class=" h3  p-5 text-lowercase rounded-circle border border-danger  bg-info text-light text-center ">
@@ -130,13 +130,13 @@
                 ÜYE OL!
             </a>
             <div class="h3 font-weight-bold text-center mb-5 mt-5">
-               YÖNETİM KURULU MESAJI
+                YÖNETİM KURULU MESAJI
             </div>
 
             <div class="h3 font-weight-light   text-center text-justify">Duimder Dijital açıldı! . Dernek üyelerimiz
                 için
                 oluşturulan sosyal ağımızın test yayınına başladık lütfen üye olunuz.
-                
+
             </div>
         </div>
         <hr class="hr">
@@ -151,53 +151,53 @@
                         <h2>HABERLER</h2>
                     </div>
                     <div class="d-block d-sm-flex justify-content-center">
-                    <div class="activities ">
-                        <a href="zirve.html" class="text-decoration-none">
-                            <div class=" news rounded mb-2">
-                                <div class=" p-1">
-                                    <div class="img-same">
-                                    <img class="  pb-2" src="/assets/images/IMG_9589.JPG" alt="Hakan Karaca">
- </div>
-                                    <div class="media-body font-weight-light text-dark">
+                        <div class="activities ">
+                            <a href="canliyayin.html" class="text-decoration-none">
+                                <div class=" news rounded mb-2">
+                                    <div class=" p-1">
+                                        <div class="img-same">
+                                            <img class="  pb-2" src="/assets/images/canlıyayın.png" alt="Hakan Karaca">
+                                        </div>
+                                        <div class="media-body font-weight-light text-dark">
 
-                                        <p class="mt-0 h5 font-weight-bold text-justify  ">BÜDEMDER
-                                            Derneği Zirvesi</p>
-                                        Bülent Ecevit Üniversitesi Denizcilik Mezunları Ve Öğrencileri Derneği
-                                        tarafından düzenlenen
-                                        Karadeniz Denizcilik ve Lojistik Zirvesin'de başkanımız Hakan Karaca bir
-                                        konuşma
-                                        yaptı.
+                                            <p class="mt-0 h5 font-weight-bold text-justify  ">i.Ü.C DUİM 25. MEZUNİYET
+                                                YILI VE KABOTAJ BAYRAMI KUTLAMASI
+                                            </p>
+                                            Kabotaj Bayramı ve Bölümümüz 25. yılı mezuniyetini kutlama amaçlı canlı
+                                            yayınımızı kaçırmayın. Canlı yayın konuğumuz
+                                            bölüm kurucularımızdan PROF.DR.MEHMET CELAL BARLA.
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
-                        </a>
-                    </div>
+                            </a>
+                        </div>
 
-<div class="activities ">
-                        <a href="tv.html" class="text-decoration-none">
-                            <div class=" news rounded mb-2">
-                                <div class=" p-1">
-                                    <div class="img-same">
-                                    <img class=" pb-2" src="/assets/images/berrak.png" alt="Burcu Berrak">
-</div>
-                                    <div class="media-body font-weight-light text-dark">
+                        <div class="activities ">
+                            <a href="tv.html" class="text-decoration-none">
+                                <div class=" news rounded mb-2">
+                                    <div class=" p-1">
+                                        <div class="img-same">
+                                            <img class=" pb-2" src="/assets/images/berrak.png" alt="Burcu Berrak">
+                                        </div>
+                                        <div class="media-body font-weight-light text-dark">
 
-                                        <p class="mt-0 h5 font-weight-bold text-justify  ">Habertürk TV Canlı Yayını
+                                            <p class="mt-0 h5 font-weight-bold text-justify  ">Habertürk TV Canlı Yayını
                                             </p>
 
-                                        TÜRKPANDİ Hasar Müdürü olarak görev yapan Kadın Meslektaşımız Burcu Berrak (İÜ/DUİM 2000)
-                                        ve Wista_Turkey Başkanı Nazlı Selek ile Kadın Denizciler Konuşuldu
+                                            TÜRKPANDİ Hasar Müdürü olarak görev yapan Kadın Meslektaşımız Burcu
+                                            Berrak (İÜ/DUİM 2000)
+                                            ve Wista_Turkey Başkanı Nazlı Selek ile Kadın Denizciler Konuşuldu
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
-                        </a>
+                            </a>
 
 
 
 
+                        </div>
+                    </div>
                 </div>
-            </div>
-            </div>
 
                 <div class="col-12 col-sm-6 d-none ">
                     <div class="text-center  pb-3 mt-4 mt-sm-0 news-title">
@@ -457,7 +457,11 @@
 
     </script>
     </script>
-
+    <script type="text/javascript">
+        $(window).on('load', (function () {
+            $('#myModal').modal('show');
+        }));
+    </script>
     <script src="assets/js/lightbox.min.js">
     </script>
 
