--- a/index.html
+++ b/index.html
@@ -60,30 +60,22 @@
 
                 <div class="modal-body">
                     <div class="d-flex  flex-column justify-content-center align-items-center">
-                        <!--
                         <div class="text-white text-centered font-weight-bold h3">
-                            ACI KAYBIMIZ
-                        </div> -->
-                        <img src="/assets/images/Kabotaj-Bayramı-Duim-Der (1).png" class="img-fluid"></img>
-                        <!-- <div class="pt-2 text-white">
-                            20.12.2019 tarihinde Hint okyanusunda seyir halinde , gemi kaptanı olarak görevi başındayken
-                            hain bir saldırı sonucu hayatını kaybeden İTÜ Denizcilik Fakültesi Güverte 1997 mezunu
-                            Kaptan Bora EKŞİ’yi kaybetmenin derin üzüntüsü içindeyiz.
+                            DUİMDER STAJ BAŞVURULARI
+                        </div>
+                        <img src="/assets/images/staj.jpg" class="img-fluid"></img>
+                        <div class="pt-2 text-white">
+                            Staj yapmak isteyen öğrencilerimiz linkteki formu doldurarak, staj başvurularını
+                            gerçekleştirebilirler.
 
-                            İstanbu Üniversitesi Deniz Ulaştırma İşletme Mühendisleri Mezunlar Derneği olarak bu hain
-                            saldırıyı şiddetle kınıyor , yetkili tüm kurum ve kuruluşlardan gereğinin yapılmasını talep
-                            ediyoruz.
-
-                            Deniz şehidimiz Kaptan Bora EKŞİ’ye Allah'tan rahmet , başta ailesi ve sevenleri olmak üzere
-                            tüm camiamıza sabır ve başsağlığı diliyoruz.
-
-                            Kaptan Bora EKŞİ’nin cenazesi , 25.12.2019 tarihinde Altunizade Marmara İlahiyat Fakültesi
-                            Camii’ndeki öğle namazının ardından Valide Sultan Mezarlığı’na defnedilecektir.
-                        </div> -->
+                        </div>
+                        <a href="https://docs.google.com/forms/d/e/1FAIpQLScqJlf1AFmdv8ClW46PGDj5ZfxXOnG2c9ijfYkZMj2i2wBLXg/viewform?embedded=true"
+                            class="p-3"">STAJ
+                            BAŞVURU FORMU İÇİN TIKLAYINIZ</a>
                     </div>
-                    <!-- <div class="text-right text-white font-weight-bold">
-                        İÜ DUİMDER Yönetim Kurulu
-                    </div> -->
+                    <div class=" text-right text-white font-weight-bold">
+                            İÜ DUİMDER Yönetim Kurulu
+                    </div>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">KAPAT</button>
