--- a/index.html
+++ b/index.html
@@ -103,30 +103,33 @@
             <div class="h5   font-weight-bold text-center mb-5 pb-1 mb-sm-3 mb-md-4 mb-lg-5 mb-xl-5  text-white  ">
                 İstanbul
                 Üniversitesi Deniz Ulaştırma İşletme <br> Mühendisliği Mezunları Derneği</div>
-            <a role="button" id="tuzuk" class="btn-lg btn-info " href="assets/pdf/DUİMMED TÜZÜK.pdf"
-                download="DUIMTUZUK.PDF">
-
-                DERNEK TÜZÜĞÜ
-            </a>
-            <a role="button" id="tuzuk" class="btn-lg btn-danger mt-1 " href="assets/pdf/DuimderÜyelikFormu .pdf"
-                download="DüimderÜyelikFormu .PDF">
-
-                ÜYELİK FORMU
-            </a>
         </div>
         <div class="boxes d-sm-flex mb-sm-5  justify-content-center align-items-center">
             <div class=" bg-primary">
                 <div class="box">
-                    HABERLER </div>
+                    <a class="text-white text-decoration-none " href="assets/pdf/DUİMMED TÜZÜK.pdf"
+                        download="DUIMTUZUK.PDF">
+
+                        DERNEK TÜZÜĞÜ
+                    </a>
+                </div>
             </div>
             <div class=" bg-warning">
                 <div class="box">
-                    ETKİNLİKLER</div>
+                    <a class=" text-white text-decoration-none " href="assets/pdf/DuimderÜyelikFormu .pdf"
+                        download="DuimÜyelikFormu.PDF">
+
+                        ÜYELİK FORMU
+                    </a>
+                </div>
             </div>
 
             <div class="bg-danger">
                 <div class="box">
-                    DİJİTAL
+
+                    <a href="https://www.duimder.org/" class="text-decoration-none text-white">
+                        DİJİTAL
+                    </a>
                 </div>
             </div>
         </div>
