--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         <a class="nav-link text-uppercase text-primary " href="#">ÜYELİK</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-uppercase text-primary" href="#">İLETİŞİM</a>
+                        <a class="nav-link text-uppercase text-primary" href="contact.html">İLETİŞİM</a>
                     </li>
                 </ul>
             </div>
@@ -376,7 +376,7 @@
                                     <li><a href="#">Ana Sayfa</a></li>
                                     <li><a href="#">Haberler</a></li>
                                     <li><a href="#">Etkinlikler</a></li>
-                                    <li><a href="#">İletişim</a></li>
+                                    <li><a href="contact.html">İletişim</a></li>
                                     <li><a href="#">Site Sözleşmesi</a></li>
                                 </ul>
                             </div>
