Stajyer talep formu

--- a/index.html
+++ b/index.html
@@ -78,13 +78,18 @@
                                 allowfullscreen></iframe>
                         </div>
                         <div class="pt-2 text-white">
-                            Staj yapmak isteyen öğrencilerimiz linkteki formu doldurarak, staj başvurularını
+                            Staj yapmak isteyen öğrencilerimiz veya stajyer arayan şirketler linkteki formları
+                            doldurarak, başvurularını
                             gerçekleştirebilirler.
 
                         </div>
                         <a href="https://docs.google.com/forms/d/e/1FAIpQLScqJlf1AFmdv8ClW46PGDj5ZfxXOnG2c9ijfYkZMj2i2wBLXg/viewform?embedded=true"
-                            class="p-3"">STAJ
-                            BAŞVURU FORMU İÇİN TIKLAYINIZ</a>
+                            class="p-3"">
+                            STAJ BAŞVURU FORMU İÇİN TIKLAYINIZ(ÖĞRENCİLER İÇİN)</a>
+                            <a href="
+                            https://docs.google.com/forms/d/e/1FAIpQLSf7WQu1Ga1mJYJMj8icq7d8dXCujwEBUvqu29ZKEuDyU8g4vA/viewform"
+                            class="p-3"">
+                            STAJYER TALEP FORMU İÇİN TIKLAYINIZ(ŞİRKETLER İÇİN)</a>
                     </div>
                     <div class=" text-right text-white font-weight-bold">
                             İÜ DUİMDER Yönetim Kurulu
