--- a/index.html
+++ b/index.html
@@ -151,12 +151,12 @@
                 KABOTAJ BAYRAMI VE BÖLÜMÜMÜZ 25. YILI KUTLAMA VİDEOLARI
             </div>
             <div class="d-sm-flex flex-row  justify-content-between">
-                <video height="350" width="350" controls>
+                <video height="350" width="350" controls autoplay="false">
                     <source src="./assets/video/duim_der_105619649_276638217107713_8888035054052505607_n.mp4"
                         type="video/mp4">
                     <source src="mov_bbb.ogg" type="video/ogg">
                 </video>
-                <video height="350" width="350" controls>
+                <video height="350" width="350" controls autoplay="false">
                     <source src="./assets/video/Video.mov" type="video/mp4">
                 </video>
             </div>
@@ -480,11 +480,7 @@
 
     </script>
     </script>
-    <script type="text/javascript">
-        $(window).on('load', (function () {
-            $('#myModal').modal('show');
-        }));
-    </script>
+   
     <script src="assets/js/lightbox.min.js">
     </script>
 
