Video remove, modal

--- a/index.html
+++ b/index.html
@@ -60,39 +60,22 @@
 
                 <div class="modal-body">
                     <div class="d-flex  flex-column justify-content-center align-items-center">
+
                         <div class="text-white text-centered font-weight-bold h3">
-                            DUİMDER STAJ BAŞVURULARI
+                            ACI KAYBIMIZ
                         </div>
-                        <!-- <img src="/assets/images/staj.jpg" class="img-fluid"></img> -->
-                        <!-- <div class="d-sm-flex flex-row  justify-content-between">
-                            <video class="flex-grow-1" controls>
-                                <source
-                                    src="./assets/video/duim_der_105619649_276638217107713_8888035054052505607_n.mp4"
-                                    type="video/mp4">
-                                <source src="mov_bbb.ogg" type="video/ogg">
-                            </video>
-
-                        </div> -->
-                        <div class="embed-responsive embed-responsive-1by1">
-                            <iframe class="embed-responsive-item" src="./assets/video/staj.mp4"
-                                allowfullscreen></iframe>
-                        </div>
+                        <img src="assets/images/raşitaltınokcenaze.jpeg" class="img-fluid"></img>
                         <div class="pt-2 text-white">
-                            Staj yapmak isteyen öğrencilerimiz veya stajyer arayan şirketler linkteki formları
-                            doldurarak, başvurularını
-                            gerçekleştirebilirler.
 
+                            Mezunlar Derneği Kurucu üyemiz ve eski Dernek Başkan'larımızdan Değerli Kaptanımız Raşit
+                            Altınok' un vefatını üzülerek öğrenmiş bulunmaktayız. Kendisine Allah' tan rahmet,ailesine
+                            sabırlar dileriz. Mekanı cennet olsun. Bölümümüze ve derneğimize yaptığı değerleri katkıları
+                            her zaman hatırlayacağız. Cenazesi 27 Mayıs Perşembe saat 14:00'da Ümraniye Hekimbaşı
+                            mezarlığına defnedilecektir
                         </div>
-                        <a href="https://docs.google.com/forms/d/e/1FAIpQLScqJlf1AFmdv8ClW46PGDj5ZfxXOnG2c9ijfYkZMj2i2wBLXg/viewform?embedded=true"
-                            class="p-3"">
-                            STAJ BAŞVURU FORMU İÇİN TIKLAYINIZ(ÖĞRENCİLER İÇİN)</a>
-                            <a href="
-                            https://docs.google.com/forms/d/e/1FAIpQLSf7WQu1Ga1mJYJMj8icq7d8dXCujwEBUvqu29ZKEuDyU8g4vA/viewform"
-                            class="p-3"">
-                            STAJYER TALEP FORMU İÇİN TIKLAYINIZ(ŞİRKETLER İÇİN)</a>
                     </div>
-                    <div class=" text-right text-white font-weight-bold">
-                            İÜ DUİMDER Yönetim Kurulu
+                    <div class="text-right text-white font-weight-bold">
+                        İÜ DUİMDER Yönetim Kurulu
                     </div>
                 </div>
                 <div class="modal-footer">
@@ -102,6 +85,7 @@
             </div>
         </div>
     </div>
+
     <div class="hero  ">
         <div class="overlay d-flex flex-column justify-content-around justify-content-sm-start align-items-center ">
             <img src="/assets/images/derneklogoorta.png" class="img-fluid mt-3 mb-3 mb-sm-5 mt-sm-5" alt="">
@@ -147,19 +131,8 @@
                 DİJİTAL'e<br>
                 ÜYE OL!
             </a>
-            <div class="h3 font-weight-bold text-center mb-5 mt-5">
-                KABOTAJ BAYRAMI VE BÖLÜMÜMÜZ 25. YILI KUTLAMA VİDEOLARI
-            </div>
-            <div class="d-sm-flex flex-row  justify-content-between">
-                <video height="350" width="350" controls autoplay="false">
-                    <source src="./assets/video/duim_der_105619649_276638217107713_8888035054052505607_n.mp4"
-                        type="video/mp4">
-                    <source src="mov_bbb.ogg" type="video/ogg">
-                </video>
-                <video height="350" width="350" controls autoplay="false">
-                    <source src="./assets/video/Video.mov" type="video/mp4">
-                </video>
-            </div>
+
+
 
         </div>
         <hr class="hr">
@@ -413,7 +386,8 @@
                     </div>
                     <div class="row mt-3">
                         <div class="col-md-12 copy">
-                            <p class="text-center">&copy; Duimder <script language="JavaScript" type="text/javascript">
+                            <p class="text-center">&copy; Duimder
+                                <script language="JavaScript" type="text/javascript">
                                     now = new Date
                                     theYear = now.getYear()
                                     if (theYear < 1900)
@@ -474,13 +448,17 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
         integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
-    </script>
+        </script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
 
+        </script>
     </script>
+    <script type="text/javascript">
+        $(window).on('load', (function () {
+            $('#myModal').modal('show');
+        }));
     </script>
-   
     <script src="assets/js/lightbox.min.js">
     </script>
 
